// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker is disabled 1`] = `
.c1 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 .datePicker {
  box-sizing: border-box;
}

.c2 .popper[data-placement^="bottom"] {
  margin-top: 0;
}

.c2 .customHeader {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 0 var(--spacing-2x) 0;
}

.c2 .customHeader > button {
  background-color: #FFFFFF;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
}

.c2 .customHeader > button:focus {
  outline: none;
}

.c2 .customHeader > button:hover {
  cursor: pointer;
}

.c2 .react-datepicker__header {
  background-color: #FFFFFF;
  border-bottom: none;
  padding: 0;
}

.c2 .react-datepicker__month {
  font-family: 'Open Sans',sans-serif;
  font-size: 0.875rem;
  margin: 0;
}

.c2 .react-datepicker__month .react-datepicker__day {
  border: 1px solid transparent;
  box-sizing: border-box;
  height: 32px;
  line-height: 2rem;
  margin: 0;
  width: 32px;
}

.c2 .react-datepicker__month .react-datepicker__day:hover {
  background-color: #D9DDE2;
  border-radius: 24px;
}

.c2 .react-datepicker__month .react-datepicker__day:focus {
  outline: none;
}

.c2 .react-datepicker__month .react-datepicker__day--outside-month {
  color: #57666E;
}

.c2 .react-datepicker__month .react-datepicker__day--outside-month.react-datepicker__day--selected {
  color: #FFFFFF;
}

.c2 .react-datepicker__month .react-datepicker__day--disabled {
  color: #9CA7B4;
}

.c2 .react-datepicker__month .react-datepicker__day--disabled:hover {
  background-color: #FFFFFF;
}

.c2 .react-datepicker__month .react-datepicker__day--keyboard-selected {
  background-color: #FFFFFF;
  border: 1px solid #0080A5;
  border-radius: 24px;
  box-shadow: 0 0 0 2px rgba(0,128,165,0.4);
  box-sizing: border-box;
  color: #000000;
}

.c2 .react-datepicker__month .react-datepicker__day--keyboard-selected.react-datepicker__day--today {
  color: #0080A5 !important;
}

.c2 .react-datepicker__month .react-datepicker__day--today {
  color: #0080A5;
  font-weight: 400;
}

.c2 .react-datepicker__month .react-datepicker__day--today.react-datepicker__day--keyboard-selected {
  color: #000000;
}

.c2 .react-datepicker__month .react-datepicker__day--today.react-datepicker__day--selected {
  color: #FFFFFF;
}

.c2 .react-datepicker__month .react-datepicker__day--selected {
  background-color: #0080A5;
  border-radius: 24px;
}

.c2 .react-datepicker__day-name {
  font-family: 'Open Sans',sans-serif;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  text-transform: uppercase;
}

.c2 .react-datepicker__portal .customHeader {
  padding: 0 var(--spacing-1x) var(--spacing-3x);
}

.c2 .react-datepicker__portal .react-datepicker__day-name {
  font-size: 1rem;
  line-height: 2.25rem;
  width: 35px;
}

.c2 .react-datepicker__portal .react-datepicker__day {
  height: 40px;
  line-height: 2.5rem;
  width: 40px;
}

.c2 .react-datepicker__portal .react-datepicker__month {
  font-size: 1rem;
}

.c2 .react-datepicker {
  border: 1px solid #D9DDE2;
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  font-family: 'Open Sans',sans-serif;
  padding: var(--spacing-3x) var(--spacing-2x);
}

.c3.datePicker {
  background-color: #F1F2F2;
  border: 1px solid #D9DDE2;
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  font-family: inherit;
  font-size: 0.875rem;
  height: 32px;
  padding: var(--spacing-half) 0 var(--spacing-half) var(--spacing-1x);
  width: 109px;
}

.c3.datePicker::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c3.datePicker::-moz-placeholder {
  color: #9CA7B4;
}

.c3.datePicker:-ms-input-placeholder {
  color: #9CA7B4;
}

.c3.datePicker::placeholder {
  color: #9CA7B4;
}

.c3.datePicker:focus {
  border: 1px solid #0080A5;
  outline: none;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #D9DDE2;
  border-left: none;
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  color: #9CA7B4;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32px;
}

.c4:hover {
  background-color: none;
}

.c4:focus {
  outline: none;
}

<div
  class="c0"
>
  <label
    class="c1"
  >
    date
  </label>
  <div
    class="c2"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          class="c3 datePicker"
          disabled=""
          placeholder="YYYY-MM-DD"
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      class="c4 sideIcon"
      disabled=""
    >
      <svg
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </button>
  </div>
</div>
`;

exports[`Datepicker matches snapshot 1`] = `
.c1 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 .datePicker {
  box-sizing: border-box;
}

.c2 .popper[data-placement^="bottom"] {
  margin-top: 0;
}

.c2 .customHeader {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 0 var(--spacing-2x) 0;
}

.c2 .customHeader > button {
  background-color: #FFFFFF;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
}

.c2 .customHeader > button:focus {
  outline: none;
}

.c2 .customHeader > button:hover {
  cursor: pointer;
}

.c2 .react-datepicker__header {
  background-color: #FFFFFF;
  border-bottom: none;
  padding: 0;
}

.c2 .react-datepicker__month {
  font-family: 'Open Sans',sans-serif;
  font-size: 0.875rem;
  margin: 0;
}

.c2 .react-datepicker__month .react-datepicker__day {
  border: 1px solid transparent;
  box-sizing: border-box;
  height: 32px;
  line-height: 2rem;
  margin: 0;
  width: 32px;
}

.c2 .react-datepicker__month .react-datepicker__day:hover {
  background-color: #D9DDE2;
  border-radius: 24px;
}

.c2 .react-datepicker__month .react-datepicker__day:focus {
  outline: none;
}

.c2 .react-datepicker__month .react-datepicker__day--outside-month {
  color: #57666E;
}

.c2 .react-datepicker__month .react-datepicker__day--outside-month.react-datepicker__day--selected {
  color: #FFFFFF;
}

.c2 .react-datepicker__month .react-datepicker__day--disabled {
  color: #9CA7B4;
}

.c2 .react-datepicker__month .react-datepicker__day--disabled:hover {
  background-color: #FFFFFF;
}

.c2 .react-datepicker__month .react-datepicker__day--keyboard-selected {
  background-color: #FFFFFF;
  border: 1px solid #0080A5;
  border-radius: 24px;
  box-shadow: 0 0 0 2px rgba(0,128,165,0.4);
  box-sizing: border-box;
  color: #000000;
}

.c2 .react-datepicker__month .react-datepicker__day--keyboard-selected.react-datepicker__day--today {
  color: #0080A5 !important;
}

.c2 .react-datepicker__month .react-datepicker__day--today {
  color: #0080A5;
  font-weight: 400;
}

.c2 .react-datepicker__month .react-datepicker__day--today.react-datepicker__day--keyboard-selected {
  color: #000000;
}

.c2 .react-datepicker__month .react-datepicker__day--today.react-datepicker__day--selected {
  color: #FFFFFF;
}

.c2 .react-datepicker__month .react-datepicker__day--selected {
  background-color: #0080A5;
  border-radius: 24px;
}

.c2 .react-datepicker__day-name {
  font-family: 'Open Sans',sans-serif;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  text-transform: uppercase;
}

.c2 .react-datepicker__portal .customHeader {
  padding: 0 var(--spacing-1x) var(--spacing-3x);
}

.c2 .react-datepicker__portal .react-datepicker__day-name {
  font-size: 1rem;
  line-height: 2.25rem;
  width: 35px;
}

.c2 .react-datepicker__portal .react-datepicker__day {
  height: 40px;
  line-height: 2.5rem;
  width: 40px;
}

.c2 .react-datepicker__portal .react-datepicker__month {
  font-size: 1rem;
}

.c2 .react-datepicker {
  border: 1px solid #D9DDE2;
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  font-family: 'Open Sans',sans-serif;
  padding: var(--spacing-3x) var(--spacing-2x);
}

.c3.datePicker {
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  font-family: inherit;
  font-size: 0.875rem;
  height: 32px;
  padding: var(--spacing-half) 0 var(--spacing-half) var(--spacing-1x);
  width: 109px;
}

.c3.datePicker:focus {
  border: 1px solid #0080A5;
  outline: none;
}

.c3.datePicker:focus {
  border: 1px solid #0080A5;
  outline: none;
}

.c3.datePicker:focus {
  border: 1px solid #0080A5;
  outline: none;
}

.c3.datePicker:focus {
  border: 1px solid #0080A5;
  outline: none;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-left: none;
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32px;
}

.c4:hover {
  background-color: #D9DDE2;
}

.c4:focus {
  outline: none;
}

<div
  class="c0"
>
  <label
    class="c1"
  >
    date
  </label>
  <div
    class="c2"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          class="c3 datePicker"
          placeholder="YYYY-MM-DD"
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      class="c4 sideIcon"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </button>
  </div>
</div>
`;
